--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./res/styles/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <title>Portfolio | Christian Ochoa</title>
+    <title>Portafolio | Christian Ochoa</title>
 </head>
 
 <body>
@@ -26,17 +26,17 @@
             <ul class="navbar__contents__ul">
                 <li class="navbar__contents__li">
                     <a href="#main-info" class="goto-contact" onclick="gotoContactSection(event)">
-                        Contact
+                        Contacto
                     </a>
                 </li>
                 <li class="navbar__contents__li">
                     <a href="#about-me" class="goto-about" onclick="gotoAboutSection(event)">
-                        About me
+                        Sobre mi
                     </a>
                 </li>
                 <li class="navbar__contents__li">
                     <a href="#portfolio" class="goto-portfolio" onclick="gotoPortfolioSection(event)">
-                        Portfolio
+                        Portafolio
                     </a>
                 </li>
             </ul>
@@ -52,17 +52,17 @@
         <ul class="navlinks">
             <li class="nav-link">
                 <a href="#main-info" class="nav-link__link" onclick="gotoContactSection(event)">
-                    Contact
+                    Contacto
                 </a>
             </li>
             <li class="nav-link">
                 <a href="#about-me" onclick="gotoAboutSection(event)" class="nav-link__link">
-                    About me
+                    Sobre mi
                 </a>
             </li>
             <li class="nav-link">
                 <a href="#portfolio" class="nav-link__link" onclick="gotoPortfolioSection(event)">
-                    Portfolio
+                    Portafolio
                 </a>
             </li>
         </ul>
@@ -83,7 +83,7 @@
                         <p class="content__media__name">
                             <span class="cap">C</span>hristian <span class="cap">O</span>choa
                         </p>
-                        <p class="content__media__desc">Software developer, Freelancer, Student.</p>
+                        <p class="content__media__desc">Desarrollador web, Freelancer, Estudiante.</p>
                     </div>
                 </div>
                 <div class="content__platforms">
@@ -127,13 +127,14 @@
     <section id="about-me" class="about-me">
         <div id="about-me-content" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="1000" ata-aos-offset="200">
             <h1>
-                Hi, i'm Christian!
+                Hola, soy Christian
             </h1>
-            <span id="typed-strings">
-    
-            </span>
+            <div class="typed-box">
+                <span id="typed-strings">
+                </span>
+            </div>
             <p class="about-me__paragraph">
-                Student of software engineering in <strong>Guadalajara, México</strong>.
+                Estudiante de ingeniería en desarrollo de software <strong>originario de Guadalajara, México</strong>.
                 <br />
                 I describe myself as someone who love technology from the simplest to the most complex.
                 <br/>
@@ -157,10 +158,10 @@
 
     <section id="portfolio">
         <h2 class="porftolio-title" data-aos="zoom-in-up" data-aos-delay="50" data-aos-duration="1500">
-            Portfolio
+            Portafolio
         </h2>
         <p class="portfolio-desc" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="2000">
-            There's some of my work (Personal and school projects).
+            Algunos de mis trabajos (Proyectos personales y escolares).
         </p>
         <div id="card-container" class="portfolio-container">
 
@@ -175,7 +176,7 @@
             <div class="container">
                 <section class="col">
                     <ul class="social">
-                        <span class="footer__subtitle">Contact</span>
+                        <span class="footer__subtitle">Contacto</span>
                         <li>
                             <a href="https://github.com/deadchri5" target="_blank">
                                 Github
@@ -197,20 +198,20 @@
             <div class="container">
                 <section class="col">
                     <ul class="map-site">
-                        <span class="footer__subtitle">Map of the site</span>
+                        <span class="footer__subtitle">Mapa del sitio</span>
                         <li>
                             <a href="#about-me" class="goto-contact" onclick="gotoContactSection(event)">
-                                Contact
+                                Contacto
                             </a>
                         </li>
                         <li>
                             <a href="#main-info"class="goto-about" onclick="gotoAboutSection(event)">
-                                About me
+                                Sobre mi
                             </a>
                         </li>
                         <li>
                            <a href="#portfolio" class="goto-portfolio" onclick="gotoPortfolioSection(event)">
-                            Portfolio
+                            Portafolio
                         </a>
                         </li>
                     </ul>
