Cambios en texto de acerca de mi

--- a/index.html
+++ b/index.html
@@ -134,23 +134,15 @@
                 </span>
             </div>
             <p class="about-me__paragraph">
-                Estudiante de ingeniería en desarrollo de software <strong>originario de Guadalajara, México</strong>.
-                <br />
-                I describe myself as someone who love technology from the simplest to the most complex.
-                <br/>
-                As a software developer i have the tought that it is always good to larning new things. I learned
-                that from my career. 
-                <br/>
-                My best skills are in the <strong>web development</strong> sector, as a 
-                <strong>fullstack developer</strong>.
+                <strong>Desarrollador web</strong> frontend, en mi carrera tocado un gran número de tecnologías de software, pero sin duda
+                lo que más me gusta es el desarrollo web frontend, tengo conocimientos en <span class="sp-react">ReactJS</span> y <span class="sp-angular">Angular</span>.
+            </p>
+            <p class="about-me__paragraph">
+                Cuento con nociones de backend ya que he construido y aplicado REST APIS con NodeJS o Laravel.
             </p>
             <i class="about-me__paragraph">
-                Thanks for visit my personal web page, you can feel free to get in touch and take a look
-                at my work.
+                Gracias por ver mi portafolio.
             </i>
-            <p class="about-me__paragraph">
-                Regards!
-            </p>
         </div>
     </section>
 
