--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             Portafolio
         </h2>
         <p class="portfolio-desc" data-aos="zoom-in" data-aos-delay="50" data-aos-duration="2000">
-            Algunos de mis trabajos (Proyectos personales y escolares).
+            Mis trabajos (Proyectos personales y escolares).
         </p>
         <div id="card-container" class="portfolio-container">
 
