--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./res/styles/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <title>Portafolio | Christian Ochoa</title>
+
 </head>
 
 <body>
@@ -96,9 +98,6 @@
                         <a href="https://linkedin.com/in/christianOchoa5" target="_blank">
                             <img src="./res/images/icons/linkedin.svg" alt="Linkedin">
                         </a>
-                    </div>
-                    <div class="platform show-effect-discord">
-                        <img src="./res/images/icons/discord.svg" alt="Discord">
                     </div>
                     <div class="platform show-effect-gmail">
                         <a href="mailto:christianhdez022@gmail.com">
