Eliminacion de archivos innecesarios

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
         AOS.init();
     </script>
     <!--Particles Js library-->
-    <script type="text/javascript" src="./node_modules/particles.js/particles.js"></script>
-    <script type="text/javascript" src="./node_modules/particles.js/demo/js/app.js"></script>
+    <script type="text/javascript" src="./particles/particles.js"></script>
+    <script type="text/javascript" src="./particles/app.js"></script>
     <!--TypedJs-->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="./res/scripts/typed.js"></script>
