--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section id="main-info" class="content">
             <div class="main-box">
                 <div class="content__media">
-                    <img class="content__media__image" src="./res/images/IMG_20191223_212738.jpg"
+                    <img class="content__media__image" src="https://avatars.githubusercontent.com/u/49920631?v=4"
                         alt="My picture" />
                     <div class="content__media__info">
                         <p class="content__media__name">
