agregue leyenda para dezlizar

--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
             </div>
         </section>
         <div class="slide-element">
-            <p>Desplaza hacia abajo.</p>
+            <p>Desliza hacia abajo.</p>
+            <div class="arrowContainer">
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
         </div>
     </div>
 
