Efecto agregado a leyenda de deslizar

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </section>
-        <div class="slide-element">
+        <div id="slide-down" class="slide-element">
             <p>Desliza hacia abajo.</p>
             <div class="arrowContainer">
                 <div class="line"></div>
