nueva rama modal iniciada

--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
 
     <!--End: footer section-->
 
+    <!--Modal for project information-->
+    
+    <!--Modal for project information END-->
+
     <!--Scripts-->
     <script src="./res/scripts/effects.js"></script>
     <script src="./res/scripts/navbarDesktop.js"></script>
