modal estatico agregado

--- a/index.html
+++ b/index.html
@@ -284,7 +284,23 @@
     <!--End: footer section-->
 
     <!--Modal for project information-->
-    
+    <div id="modal" class="modal">
+      <div class="modal__content">
+        <button class="modal__content__button">Cerrar</button>
+        <p class="modal__content__title">Titulo de mi modal</p>
+        <p class="modal__content__desc">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum
+          voluptas officia vero eos earum quaerat, pariatur cumque alias numquam
+          ullam repellat repudiandae dignissimos obcaecati fugit consequatur,
+          quos eius iure illo?
+        </p>
+        <iframe
+          src="https://www.youtube.com/embed/gctc2Un5iRY"
+          frameborder="0"
+          class="modal__content__video"
+        ></iframe>
+      </div>
+    </div>
     <!--Modal for project information END-->
 
     <!--Scripts-->
